welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: Unit does not take parameters
	for (i <- 1 to n) f()
                           ^