welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
def movemnt(n: Int)(f: Unit): Unit = {
	for (i <- 1 to n) f()
}

movemnt(4)(left())
movemnt(4)(backward())
movemnt(4)(right())
movemnt(2)(forward())
movemnt(1)(left())